# vecnode

./: .dockerignore  .gitignore  ABOUT.md  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  run_cli.bat  run_cli.command  run_cli.sh  vncli.md
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md  deny.toml
cli/crates/vn/: Cargo.toml
cli/crates/vn/src/: config.rs  main.rs  tray.rs
cli/crates/vn/src/commands/: ai.rs  apps.rs  docker.rs  git.rs  mcp.rs  mod.rs  net.rs  run.rs  sys.rs
cli/crates/vn/src/mcp/: approval.rs  apps_toolset.rs  docker_toolset.rs  mod.rs  report.rs  system_toolset.rs
cli/crates/vn/src/ollama/: client.rs  session.rs
cli/crates/vn/src/tui/: app.rs
docker/: Dockerfile  README.md
docker/library-portal/: Dockerfile  README.md  app.py
docker/media-downloader/: Dockerfile  README.md  app.py
docker/media-processor/: Dockerfile  README.md  TEMPLATE_COURSE.md  TEMPLATE_REVEALJS.md  api_server.py  default_reveal_presentation.md  main.sh  presentation_server.py  ui_server.py
docs/: Dockerfile  README.md  SOFTWARE.md  SUMMARY.md  book.toml  mcp-functions.md
dotfiles/: README.md
dotfiles/win11/: README.md  global_configs.ps1  setup_dotfiles.bat
scripts/: README.md  download_all_orgs.bat  download_all_orgs.sh  download_all_repos.bat  download_all_repos.sh  run_silverbullet.bat
scripts/ubuntu22/: check_dependencies.sh  check_docker.sh  check_internet.sh  check_local_network.sh  check_ollama.sh  check_peripherals.sh  clear_stirling_pdf_container.sh  clear_stirling_pdf_image.sh  download_all_orgs.sh  download_all_repos.sh  main.sh  open_doc_processor.sh  open_docker.sh  open_docs.sh  open_media_processor.sh  open_ollama.sh  remove_containers.sh  remove_images.sh  run_cli_container.sh  run_library_portal.sh  run_media_downloader.sh  run_papra.sh  run_pdfding.sh  run_silverbullet.sh  run_stirling_pdf.sh  stop_all_containers.sh  stop_library_portal.sh  stop_media_downloader.sh  stop_papra.sh  stop_pdfding.sh  stop_stirling_pdf.sh
scripts/win11/: check_dependencies.bat  check_docker.bat  check_internet.bat  check_local_network.bat  check_ollama.bat  check_peripherals.bat  clear_stirling_pdf_container.bat  clear_stirling_pdf_image.bat  download_all_orgs.bat  download_all_repos.bat  install_app_wezterm.bat  main.bat  open_doc_processor.bat  open_docker.bat  open_docs.bat  open_media_processor.bat  open_media_processor_dev.bat  open_ollama.bat  remove_containers.bat  remove_images.bat  run_cli_container.bat  run_library_portal.bat  run_media_downloader.bat  run_papra.bat  run_pdfding.bat  run_silverbullet.bat  run_stirling_pdf.bat  (+6 more)
(+9 files in other folders)
