[workspace]
members = ["crates/vn"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["vecnode"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
ratatui = "0.28"
ollama-rs = { version = "0.3", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.31"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
